added working version of make.py

--- a/analysis/output/tables_figures.tex
+++ b/analysis/output/tables_figures.tex
@@ -171,7 +171,7 @@ Country FE & no & no & no & no & yes \\
 \toprule
 \input{tables/Table4_PanelA_sustats_FirmCountry.tex}
 \midrule
-%\input{tables/Table4_PanelB_sustats_CountryQuarter.tex}
+\input{tables/Table4_PanelB_sustats_CountryQuarter.tex}
 \bottomrule
 \end{tabular}
 \begin{tablenotes}[flushleft]
